<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="ifContentScrolls"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                style="@style/NormalImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/large_logo" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp">

                <TableRow android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/driver_c" />

                    <TextView
                        android:id="@+id/tv_driver_name"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/pickup_c" />

                    <TextView
                        android:id="@+id/tv_pickup_address"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/destination_c" />

                    <TextView
                        android:id="@+id/tv_destination_address"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/distance_c" />

                    <TextView
                        android:id="@+id/tv_distance"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/trip_duration_c" />

                    <TextView
                        android:id="@+id/tv_duration"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/OrangeTripTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/trip_fare_c" />

                    <TextView
                        android:id="@+id/tv_fare"
                        style="@style/OrangeTripText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---------------" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <com.twsela.client.views.DarkenedButton
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_rect_button_bg"
        android:text="@string/close" />
</LinearLayout>