<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_green"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_from"
                style="@style/SingleLineEllipsizedText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_pickup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

            <ImageButton
                android:id="@+id/ib_from_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="7dp"
                android:src="@drawable/small_white_marker" />

            <ImageButton
                android:id="@+id/ib_from_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="7dp"
                android:src="@drawable/small_search_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_red"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_to"
                style="@style/SingleLineEllipsizedText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_destination"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

            <ImageButton
                android:id="@+id/ib_to_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="7dp"
                android:src="@drawable/small_white_marker" />

            <ImageButton
                android:id="@+id/ib_to_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="7dp"
                android:src="@drawable/small_search_icon" />
        </LinearLayout>

        <com.twsela.client.views.DarkenedButton
            android:id="@+id/btn_request_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/orange_rect_button_bg"
            android:text="@string/request_trip"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_select_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/iv_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/large_green_marker" />

        <com.twsela.client.views.DarkenedButton
            android:id="@+id/btn_select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/orange_rect_button_bg"
            android:text="@string/select_location" />
    </FrameLayout>
</FrameLayout>